# trading-model-1

./: .gitignore  README.md  SUMMARY.md  export_stockdb.py  justfile  main.py  pyproject.toml
docs/plans/: 2026-02-16-gym-environment-design.md  2026-02-16-gym-environment-plan.md  2026-02-17-rolling-daily-context-design.md  2026-02-17-rolling-daily-context-impl.md
src/trading_model/: __init__.py  train.py
src/trading_model/data/: __init__.py  loader.py
src/trading_model/env/: __init__.py  actions.py  features.py  frictions.py  rewards.py  trading_env.py
tests/: conftest.py  test_actions.py  test_env.py  test_features.py  test_frictions.py  test_integration.py  test_loader.py  test_rewards.py
