[project]
name = "trading-model"
version = "0.1.0"
description = "RL intraday trading environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "ta>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
db = [
    "pymysql>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
