[project]
name = "trading-model-1"
version = "0.1.0"
description = "RL intraday trading environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "ta>=0.11.0",
    "stable-baselines3>=2.0.0",
    "sb3-contrib>=2.0.0",
    "shimmy>=2.0.0",
    "tensorboard>=2.0.0",
    "pandas-stubs~=3.0.0",
    "click>=8.0.0",
    "optuna>=3.0.0",
    "tqdm>=4.60.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
db = [
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
